# dataset-converter

./: README.md  pyproject.toml
dataset-converter/: DatasetConverter.py  Wrapper.py  __main__.py
dataset-converter/config/: Config.py
dataset-converter/data/: BoundingBox.py  LabelData.py
dataset-converter/util/: PathUtil.py
dataset-converter/wrapper/: CocoWrapper.py  FPDSWrapper.py  LabelMeWrapper.py  VOCWrapper.py  Wrapper.py  YOLOWrapper.py
dsconvert/: DatasetConverter.py  PathUtil.py  Wrapper.py  __init__.py
dsconvert/data/: LabelData.py
