
[project]
name = "dataset-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "Spaicrab", email = "giuliodf2005@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
